# review-pc-components-find-next-deals

./: .env.example  .gitignore  README.md  pyproject.toml  quote-rig_mid-779.html  quote-rig_mid-779.json  snap-5844093f1933.json
.github/: pull_request_template.md
.github/workflows/: ci.yml  release.yml
desktop/: .gitignore  README.md  index.html  make-placeholder-icon.ps1
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: main.rs
docs/: architecture.md  data-sources-tos.md  user-guide.md
docs/adr/: 0001-python-3.12-runtime.md  0002-pydantic-v2-domain-model.md  0003-two-budget-optimizers.md  0004-tdd-pytest-socket.md  0005-cli-first-ui-roadmap.md  0006-market-adapter-registry.md  0007-scraping-off-by-default.md  0008-weasyprint-pdf.md  0009-linux-probe-lshw.md  0010-fastapi-htmx-dashboard.md  0011-tauri-shell.md  0012-plugin-sdk.md  README.md
lib/: README.md
packaging/: build_exe.ps1  build_exe.sh  pca-gui.spec  pca.spec
prompts/: plan-request.md
resources/catalogs/: deprecation.yaml  us_tax_rates.yaml
resources/market/: default_market.json
resources/schemas/: Benchmark.schema.json  BudgetConstraint.schema.json  Component.schema.json  Deal.schema.json  MarketItem.schema.json  Quote.schema.json  Report.schema.json  SystemSnapshot.schema.json  UpgradeItem.schema.json  UpgradePlan.schema.json
resources/templates/: dashboard.html.j2  quote.html.j2  report.html.j2
src/pca/: __init__.py  __main__.py
src/pca/benchmarking/: runner.py
src/pca/benchmarking/wrappers/: __init__.py  cpu_builtin.py  shellouts.py
src/pca/budget/: constraints.py  optimizer_greedy.py  optimizer_ilp.py  optimizer_multi.py
src/pca/core/: config.py  db.py  errors.py  logging.py  models.py  resources.py  units.py
src/pca/deprecation/: catalog.py  driver_check.py  rules.py
src/pca/explainer/: __init__.py  ollama.py  openai.py  protocol.py
src/pca/gap_analysis/: normalize.py
src/pca/inventory/: linux.py  macos.py  normalize.py  probe.py  windows.py
src/pca/market/: adapter.py  cache.py  factory.py  plugins.py  refresh.py  status.py
src/pca/market/adapters/: __init__.py  amazon_paapi.py  bestbuy.py  ebay.py  ebay_sold.py  newegg.py
src/pca/quoting/: builder.py  tax.py
src/pca/reporting/: builder.py  charts.py  pdf.py
src/pca/ui/: common.py
src/pca/ui/cli/: __main__.py  app.py
src/pca/ui/gui/: __init__.py  __main__.py  app.py  controller.py  main_window.py
src/pca/ui/web/: __init__.py  app.py
tests/: conftest.py  fixtures.py
tests/data/: README.md
tests/data/expected_quotes/: rig_budget__snapshot_normal__budget_300.json  rig_highend__snapshot_normal__budget_1500.json  rig_mid__snapshot_deal_heavy__budget_800.json  rig_mid__snapshot_normal__budget_800.json
tests/data/expected_reports/: rig_budget.json  rig_highend.json  rig_mid.json
tests/data/inventories/: lshw_sample.json  rig_budget.json  rig_highend.json  rig_mid.json  system_profiler_sample.json
tests/data/market_snapshots/: snapshot_deal_heavy.json  snapshot_normal.json
tests/functionals/: test_cli.py  test_cli_doctor.py  test_cli_market_refresh.py  test_expected_reports.py  test_gui_smoke.py  test_pdf_reporting.py  test_quote_pipeline.py  test_reporting.py  test_stub_probe_roundtrip.py  test_web_dashboard.py
tests/functionals/adapters/: test_amazon_paapi_adapter.py  test_bestbuy_adapter.py  test_ebay_adapter.py  test_ebay_sold_adapter.py  test_newegg_adapter.py
tests/units/: conftest.py  test_bench_runner.py  test_core_models.py  test_core_resources.py  test_deprecation_rules.py  test_desktop_scaffolding.py  test_explainer.py  test_gui_controller.py  test_inventory_linux.py  test_inventory_macos.py  test_inventory_normalize.py  test_kgr_fixtures.py  test_market_cache_transport.py  test_market_factory.py  test_market_refresh.py  test_market_status.py  test_optimizer_greedy.py  test_optimizer_ilp.py  test_optimizer_multi.py  test_plugin_sdk.py  test_quoting_tax.py  test_reporting_charts.py
