[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "pc-upgrade-advisor"
version = "0.1.0"
description = "Inventory a PC, benchmark it, compare to the US market, and produce a budget-optimized upgrade quote."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "PC Upgrade Advisor Contributors" }]
keywords = ["hardware", "benchmark", "upgrade", "pc-builder", "deals"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: System :: Hardware",
]

dependencies = [
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "SQLAlchemy>=2.0",
  "typer>=0.12",
  "rich>=13.7",
  "jinja2>=3.1",
  "httpx>=0.27",
  "tenacity>=8.3",
  "structlog>=24.1",
  "pulp>=2.8",
  "pyyaml>=6.0",
  "platformdirs>=4.2",
  "python-dateutil>=2.9",
]

[project.optional-dependencies]
windows = [
  "pywin32>=306; sys_platform == 'win32'",
  "WMI>=1.5.1; sys_platform == 'win32'",
  "pynvml>=11.5",
]
linux = [
  "pynvml>=11.5",
]
reporting = [
  "weasyprint>=62.0",
  "matplotlib>=3.8",
]
web = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
]
gui = [
  "PyQt6>=6.7",
]
packaging = [
  "pyinstaller>=6.6",
]
dev = [
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "pytest-asyncio>=0.23",
  "pytest-socket>=0.7",
  "pytest-recording>=0.13",
  "syrupy>=4.6",
  "hypothesis>=6.100",
  "ruff>=0.5",
  "mypy>=1.10",
  "types-PyYAML",
  "types-python-dateutil",
  "pip-audit>=2.7",
  "bandit>=1.7",
  "cyclonedx-bom>=4.4",
  "mutmut>=2.5",
]

[project.scripts]
pca = "pca.ui.cli.__main__:main"
pca-cli = "pca.ui.cli.__main__:main"

[project.urls]
Homepage = "https://github.com/example/pc-upgrade-advisor"
Issues = "https://github.com/example/pc-upgrade-advisor/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/pca"]

[tool.hatch.build.targets.sdist]
include = [
  "src/pca",
  "resources",
  "bin",
  "docs",
  "README.md",
  "pyproject.toml",
]

# ------------------------------------------------------------------
# Ruff (lint + format)
# ------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]
extend-exclude = ["lib", "resources", "docs"]

[tool.ruff.lint]
select = [
  "E", "F", "W",     # pycodestyle + pyflakes
  "I",               # isort
  "B",               # bugbear
  "UP",              # pyupgrade
  "SIM",             # simplify
  "RUF",             # ruff-specific
  "N",               # pep8-naming
  "C4",              # comprehensions
  "PL",              # pylint subset
  "PT",              # pytest style
  "D",               # pydocstyle (soft - many ignores below)
]
ignore = [
  "D100", "D101", "D102", "D103", "D104", "D105", "D107",
  "D203", "D213",
  "PLR0913",
  "PLR2004",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D", "PLR", "S101"]
"src/pca/ui/**" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

# ------------------------------------------------------------------
# Mypy
# ------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
warn_return_any = true
warn_unused_ignores = true
pretty = true
files = ["src/pca", "tests"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
  "wmi.*",
  "pynvml.*",
  "pulp.*",
  "weasyprint.*",
  "matplotlib.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# ------------------------------------------------------------------
# Pytest
# ------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
pythonpath = ["src"]
testpaths = ["tests"]
addopts = [
  "-ra",
  "--strict-markers",
  "--strict-config",
  "--showlocals",
  "--tb=short",
]
markers = [
  "slow: marks tests as slow",
  "network: marks tests that require live network access (skipped by default)",
  "windows_only: tests that only run on Windows",
  "linux_only: tests that only run on Linux",
  "macos_only: tests that only run on macOS",
  "contract: retailer-adapter contract tests (VCR-replay)",
]
filterwarnings = [
  "error",
  "ignore::DeprecationWarning:pkg_resources.*",
  "ignore::DeprecationWarning:google.*",
]

# ------------------------------------------------------------------
# Coverage
# ------------------------------------------------------------------
[tool.coverage.run]
source = ["src/pca"]
branch = true
parallel = true
omit = [
  "src/pca/ui/desktop/*",
  "src/pca/ui/web/*",
]

[tool.coverage.report]
fail_under = 85
show_missing = true
skip_covered = true
exclude_also = [
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
  "@overload",
  "pragma: no cover",
]
